fix: fixed colour contrast on question-area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,8 +102,9 @@ main {
 #question-area {
     max-width: 94%;
     margin-top: 20px;
-    background-color: #ccced0;
+    background-color: #fafafa;
     color: #333;
+    border: 1px rgb(219, 102, 182);
     border-radius: 10px;
     padding: 20px;
     font-size: 22px;
